Parse ply files

--- a/jetson/pathfinder/CMakeLists.txt
+++ b/jetson/pathfinder/CMakeLists.txt
@@ -2,6 +2,14 @@ cmake_minimum_required(VERSION 3.8)
 project(pathfinder)
 set(CMAKE_CXX_STANDARD 17)
 
+set(RAPIDJSON_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdparty/rapidjson)
+set(RAPIDJSON_BUILD_DOC OFF)
+set(RAPIDJSON_BUILD_EXAMPLES OFF)
+set(RAPIDJSON_BUILD_TESTS OFF)
+set(RAPIDJSON_BUILD_THIRDPARTY_GTEST OFF)
+add_subdirectory(${RAPIDJSON_DIR} ${CMAKE_CURRENT_BINARY_DIR}/rapidjson)
+include_directories(${RAPIDJSON_DIR}/include)
+
 file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")
 add_executable(viewer ${SOURCE_FILES})
