Change dockerfile to use apt to download pcl + vtk + opencv, avoid building from source when necesary

--- a/jetson/percep/meson.build
+++ b/jetson/percep/meson.build
@@ -31,24 +31,8 @@ if with_zed
 	all_deps += [zed]
 endif
 
-if obs_detection and not vm_config
-
-	obs_include_dirs = include_directories('/usr/local/include/pcl-1.11', 
-	'/usr/local/include/eigen3', '/usr/include/boost', '/usr/local/include/vtk-8.2', '/usr/include/flann')
-	obs = declare_dependency(
-	include_directories : obs_include_dirs,
-	link_args : [
-		# PCL
-			'-lpcl_common', '-lpcl_visualization', '-lpcl_filters', '-lpcl_segmentation', '-lpcl_search', '-lpcl_kdtree', '-lpcl_sample_consensus',
-			'-lpcl_io','-lboost_system','-lvtksys-8.2', '-lvtkRenderingCore-8.2', '-lvtkCommonCore-8.2',
-			'-lvtkCommonDataModel-8.2', '-lvtkCommonMath-8.2', '-lvtkFiltersCore-8.2', '-lvtkCommonExecutionModel-8.2', '-lvtkFiltersGeometry-8.2'
-	])
-	all_deps += [obs]
-
-elif obs_detection and vm_config
-
-	obs_include_dirs = include_directories('/usr/local/include/pcl-1.11', 
-	'/usr/local/include/eigen3', '/usr/include/boost', '/usr/include/vtk-6.3', '/usr/include/flann')
+if obs_detection
+	obs_include_dirs = include_directories('/usr/include/pcl-1.8', '/usr/include/eigen3', '/usr/include/boost', '/usr/include/vtk-6.3', '/usr/include/flann')
 	obs = declare_dependency(
 	include_directories : obs_include_dirs,
 	link_args : [
