--- a/ansible/vagrant_devbox.yml
+++ b/ansible/vagrant_devbox.yml
@@ -2,7 +2,7 @@
 - hosts: all
   become: yes
   vars:
-      ubuntu_release: bionic
+      ubuntu_release: focal
       devbox_username: vagrant
       ansible_python_interpreter: /usr/bin/python3
   roles:
